opam-version: "1.2"
name:         "carton"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/carton"
bug-reports:  "https://github.com/dinosaure/carton/issues"
dev-repo:     "https://github.com/dinosaure/carton.git"
doc:          "https://dinosaure.github.io/carton/"
license:      "MIT"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build}
  "cstruct"
  "fmt"
  "lru"
]

available: [ocaml-version >= "4.03.0"]
